--- a/package.json
+++ b/package.json
@@ -3,14 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.1",
-    "@types/node": "11.9.0",
-    "@types/react": "16.8.2",
-    "@types/react-dom": "16.8.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5",
-    "typescript": "3.3.3"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,11 +24,6 @@
   ],
   "devDependencies": {
     "axios": "^0.18.0",
-    "prettier": "^1.16.4",
-    "react-router": "^4.3.1",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^8.0.1",
-    "tslint-react": "^3.6.0"
+    "react-router-dom": "^4.3.1"
   }
 }
