--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   ],
   "devDependencies": {
     "axios": "^0.18.0",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
