Resolve all errors that appear in the console. Modify the ThubmnailList not to use the same video.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-tube",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://mytube.kentakodashima.com/",
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
