--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "my-tube",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://mytube.kentakodashima.com/",
+  "homepage": "http://mytube-react-redux.s3-website-us-west-1.amazonaws.com",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "aws s3 sync build/ s3://mytube-react-redux",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -23,12 +30,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "axios": "^0.18.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
-  }
+  "devDependencies": {}
 }
